-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.0
-
None
-
6f590d44b (dev), 7fcea568c (6.7), a0d68856d (dev), 3b2ad15ec (6.7)
-
Multimedia wk 15-16
Wireshark built with Qt 6.6 fails to start after upgrading to Qt 6.7 with:
wireshark: symbol lookup error: wireshark: undefined symbol: _ZN10QAudioSink12stateChangedEN6QAudio5StateE, version Qt_6
This was caused by the renaming of QAudio namespace in edaec2bf714c98d65f12c8ed9a2ffbd1603635a7